# maddy-api

./: Cargo.toml
src/: main.rs
