[package]
name = "maddy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.19.2", features = ["full"] }
warp = { version = "0.3.2", features = ["tls"] }
